<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".LoginFacebookActivity">
    //boton para acceder a facebook

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/fondo"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@mipmap/fondo2" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="400dp"
        android:layout_height="361dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/GoZ"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        app:srcCompat="@drawable/logoprincipal" />

    <com.facebook.login.widget.LoginButton
        android:id="@+id/login_button"
        android:layout_width="214dp"
        android:layout_height="62dp"
        android:layout_gravity="center_horizontal"

        android:layout_marginBottom="36dp"
        android:autoSizeTextType="uniform"
        android:autofillHints="@string/acceder_con_facebook"
        android:fontFamily="sans-serif-black"
        android:text="@string/acceder_con_facebook"
        android:textColorHighlight="#FF0C0C"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="368dp"
        android:layout_height="100dp"
        android:layout_marginTop="44dp"
        android:contentDescription="@string/logout"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.029"
        app:srcCompat="@mipmap/uisrael1" />

    //termina boton acceder facebook
</androidx.constraintlayout.widget.ConstraintLayout>